# Anankor

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  Translation.md  docker-compose.yaml  docker-compose.yml  eslint.config.js  justfile  package.json  pnpm-lock.yaml  podman-compose.yaml  process.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/master/: Dockerfile  README.md  package.json  vitest.config.ts
apps/worker/: Dockerfile  README.md  package.json
backend/: Dockerfile
backend/src/: main.rs
bot/: Dockerfile
bot/src/: main.rs
docs/: 01-architecture.md  02-queues-and-dedupe.md  03-data-models.md  04-lavalink.md  05-observability.md
dynamodb/: Dockerfile
infra/docker/: .env.example  docker-compose.yaml
infrastructure/prometheus/: prometheus.yml
infrastructure/tempo/: tempo.yaml
lavalink/: Dockerfile
locales/: ChineseCN.json  ChineseTW.json  Dutch.json  EnglishUS.json  French.json  German.json  Hindi.json  Indonesian.json  Italian.json  Japanese.json  Korean.json  Norwegian.json  Polish.json  PortuguesePT.json  Russian.json  SpanishES.json  Thai.json  Turkish.json  Vietnamese.json
prisma/: schema.prisma
redis/: Dockerfile
scripts/: count-worker-tokens.sh  dev.sh  restart.js
scripts/ci/: docker-build.mjs
src/: LavaClient.ts  config.ts  env.ts  index.ts  shard.ts  types.ts
src/database/: server.ts
src/plugin/: index.ts
src/shared/: database.ts  logger.ts  redis.ts
src/structures/: Command.ts  Context.ts  Event.ts  I18n.ts  LavalinkClient.ts  Lavamusic.ts  (+2 more)
(+126 files in other folders)
